[gd_scene load_steps=5 format=3 uid="uid://bpgfvwxjiu6bp"]

[ext_resource type="Script" path="res://shift/shift.gd" id="1_yq6q2"]
[ext_resource type="Theme" uid="uid://cbimufccfad2e" path="res://theme.tres" id="2_6rmm1"]
[ext_resource type="PackedScene" path="res://shift/armor_upgrade.tscn" id="3_u3pg1"]
[ext_resource type="PackedScene" path="res://shift/scanning_speed_upgrade.tscn" id="4_64o3e"]

[node name="Shift" type="Node"]
script = ExtResource("1_yq6q2")

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 4.0
autostart = true

[node name="ShiftReport" type="Panel" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -300.0
offset_right = 300.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_6rmm1")
metadata/_edit_use_anchors_ = true

[node name="ShiftReportTab" type="MarginContainer" parent="ShiftReport"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_6rmm1")

[node name="VBoxContainer" type="VBoxContainer" parent="ShiftReport/ShiftReportTab"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ShiftReport/ShiftReportTab"]
layout_mode = 2

[node name="StartShiftButton" type="Button" parent="ShiftReport/ShiftReportTab/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme = ExtResource("2_6rmm1")
text = "Next shift"

[node name="UpgradesButton" type="Button" parent="ShiftReport/ShiftReportTab/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme = ExtResource("2_6rmm1")
text = "Upgrades"

[node name="UpgradesTab" type="MarginContainer" parent="ShiftReport"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_6rmm1")

[node name="VBoxContainer" type="VBoxContainer" parent="ShiftReport/UpgradesTab"]
layout_mode = 2
theme_override_constants/separation = 13

[node name="ArmorUpgrade" parent="ShiftReport/UpgradesTab/VBoxContainer" instance=ExtResource("3_u3pg1")]
layout_mode = 2

[node name="ScanningSpeedUpgrade" parent="ShiftReport/UpgradesTab/VBoxContainer" instance=ExtResource("4_64o3e")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ShiftReport/UpgradesTab"]
layout_mode = 2
mouse_filter = 2

[node name="BackButton" type="Button" parent="ShiftReport/UpgradesTab/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme = ExtResource("2_6rmm1")
text = "Back"

[node name="ShiftReport_MarginContainer_VBoxContainer#General" type="MarginContainer" parent="."]
theme_override_constants/margin_bottom = 10

[node name="ShiftReport_MarginContainer_VBoxContainer_General#VBoxContainer" type="VBoxContainer" parent="."]

[node name="ShiftReport_MarginContainer_VBoxContainer_General_VBoxContainer#ShiftTitle" type="Label" parent="."]
unique_name_in_owner = true
size_flags_vertical = 0
theme = ExtResource("2_6rmm1")
theme_type_variation = &"Heading"

[node name="ShiftReport_MarginContainer_VBoxContainer_General_VBoxContainer#IncomeLabel" type="Label" parent="."]
unique_name_in_owner = true
size_flags_vertical = 0
theme = ExtResource("2_6rmm1")

[node name="ShiftReport_MarginContainer_VBoxContainer_General_VBoxContainer#DamageLabel" type="Label" parent="."]
unique_name_in_owner = true
size_flags_vertical = 0
theme = ExtResource("2_6rmm1")

[node name="ShiftReport_MarginContainer_VBoxContainer_General_VBoxContainer#UpkeepLabel" type="Label" parent="."]
unique_name_in_owner = true
size_flags_vertical = 0
theme = ExtResource("2_6rmm1")

[node name="ShiftReport_MarginContainer_VBoxContainer_General_VBoxContainer#UpkeepDamageLabel" type="Label" parent="."]
unique_name_in_owner = true
size_flags_vertical = 0
theme = ExtResource("2_6rmm1")

[node name="ShiftReport_MarginContainer_VBoxContainer_General_VBoxContainer#ShiftDuration" type="Label" parent="."]
unique_name_in_owner = true

[node name="ShiftReport_MarginContainer_VBoxContainer_General_VBoxContainer#TotalDuration" type="Label" parent="."]
unique_name_in_owner = true

[node name="ShiftReport_MarginContainer_VBoxContainer#DamageReport" type="MarginContainer" parent="."]
theme_override_constants/margin_bottom = 10

[node name="ShiftReport_MarginContainer_VBoxContainer_DamageReport#VBoxContainer" type="VBoxContainer" parent="."]

[node name="ShiftReport_MarginContainer_VBoxContainer_DamageReport_VBoxContainer#DamageReportTitle" type="Label" parent="."]
unique_name_in_owner = true
size_flags_horizontal = 0
theme_type_variation = &"Heading"
text = "Damage Report"

[node name="ShiftReport_MarginContainer_VBoxContainer_DamageReport_VBoxContainer#VisitMessages" type="VBoxContainer" parent="."]
unique_name_in_owner = true

[node name="ShiftReport_MarginContainer_VBoxContainer#NewSecurityRule" type="MarginContainer" parent="."]

[node name="ShiftReport_MarginContainer_VBoxContainer_NewSecurityRule#VBoxContainer" type="VBoxContainer" parent="."]

[node name="ShiftReport_MarginContainer_VBoxContainer_NewSecurityRule_VBoxContainer#NewSecurityRuleTitle" type="Label" parent="."]
size_flags_vertical = 0
theme = ExtResource("2_6rmm1")
theme_type_variation = &"Heading"
text = "New Security Rule"

[node name="ShiftReport_MarginContainer_VBoxContainer_NewSecurityRule_VBoxContainer#NewSecurityRule" type="VBoxContainer" parent="."]
unique_name_in_owner = true
size_flags_vertical = 0
theme = ExtResource("2_6rmm1")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="ShiftReport/ShiftReportTab/HBoxContainer/StartShiftButton" to="." method="_on_start_shift_button_pressed"]
[connection signal="pressed" from="ShiftReport/ShiftReportTab/HBoxContainer/UpgradesButton" to="." method="_on_upgrades_button_pressed"]
[connection signal="pressed" from="ShiftReport/UpgradesTab/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
